# QWEN-YouVSmany

./: .env.example  .gitignore  Dockerfile  LICENSE  PROGRESS.md  README.md
backend/: .env.example  README.md  pyproject.toml  railway.toml
backend/evals/debate/: rubrics.md
backend/samples/: README.md  episode_pineapple_seed0.json
backend/src/youvsmany/: __init__.py  cli.py  config.py
backend/src/youvsmany/adapters/: __init__.py  cosyvoice_tts.py  factory.py  mock_provider.py  mock_tts.py  prompts.py  qwen_provider.py  qwen_tts.py  tts_base.py
backend/src/youvsmany/agents/: __init__.py  baseline.py  character_builder.py  debaters.py  director.py  highlights.py  orchestrator.py  scene_cues.py  scene_templates.py  showrunner.py  stage_director.py  state_machine.py
backend/src/youvsmany/api/: main.py
backend/src/youvsmany/contracts/: __init__.py  brief.py  character.py  enums.py  episode.py  memory.py  plan.py  scene.py  transcript.py
backend/src/youvsmany/evals/: __init__.py  metrics.py  run_seeds.py
backend/src/youvsmany/media/: __init__.py  characters.py  reference_assets.py  shorts.py  studio.py  video_edit.py  video_variants.py
backend/src/youvsmany/store/: __init__.py  transcript_store.py
backend/tests/: test_character_bank.py  test_media_reference_assets.py  test_media_video_edit.py  test_provider_factory.py  test_repetition.py  test_safety_and_baseline.py  test_scene_contract.py  test_schemas.py  test_showrunner.py  test_state_machine.py
data/: starter_topics.json
docs/: architecture.md  submission-package.md
frontend/: README.md  config.js  (+6 more)
(+68 files in other folders)
