[project]
name = "youvsmany"
version = "0.1.0"
description = "You Vs Many — AI Debate Showrunner. Phase 1: multi-agent debate intelligence."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-dotenv>=1.0",
    "dashscope>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
yvm-debate = "youvsmany.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
